feature(authentication): User can signup [Started #167734080]
