# server/api/controllers/users/router.js
@@ -1,0 +1,6 @@
+import * as express from 'express';
+import { validateRegisterInputs } from '../../middlewares/validators';
+import controller from './controller';
+
+export default express.Router()
+  .post('/signup', validateRegisterInputs, controller.signupUser);
